--- a/ERP.models/ERP.models.csproj
+++ b/ERP.models/ERP.models.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Gender.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Status.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
