--- a/CollegeCRUD/CollegeCRUD.csproj
+++ b/CollegeCRUD/CollegeCRUD.csproj
@@ -161,11 +161,12 @@
     <Content Include="Scripts\bootstrap.bundle.js.map" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Create.cshtml" />
     <Content Include="Views\Home\GetAllRecords.cshtml" />
     <Content Include="Views\Shared\_Create.cshtml" />
     <Content Include="Scripts\jquery-3.6.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.6.0.min.map" />
+    <Content Include="Views\Home\__Create.cshtml" />
+    <Content Include="Views\Home\__Update.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
